--- a/angular.json
+++ b/angular.json
@@ -44,7 +44,8 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/_redirects"
             ],
             "styles": [
               "src/assets/vectormap/jquery-jvectormap-2.0.2.css",
