--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,10 +11,10 @@
   ],
   "paths": {
     "@pages/*": [
-      "./src/app/pages/*"
+      "src/app/pages/*"
     ],
     "@shared/*": [
-      "./src/app/shared/*"
+      "src/app/shared/*"
     ]
   },
   "include": [
